# SoccerBooking

./: .env.example  .env.test.example  ASSUMPTIONS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
backend/: auth.py  booking_utils.py  config.py  db.py  main.py  scheduler.py  slot_utils.py  webhooks.py
backend/routers/: admin.py  auth.py  main.py  profile.py
backend/static/css/: main.css
backend/templates/: base.html  index.html  login.html  profile.html  register.html
backend/templates/admin/: index.html
backend/templates/admin/partials/: booking_list.html  user_list.html
backend/templates/partials/: slot_panel.html
docs/superpowers/plans/: 2026-03-24-soccerbooking.md
docs/superpowers/specs/: 2026-03-23-soccerbooking-design.md
tests/: conftest.py  test_admin_routes.py  test_auth_routes.py  test_booking_utils.py  test_main_routes.py  test_profile_routes.py  test_slot_utils.py
